--- a/src/components/helm/HelmDrawer.css
+++ b/src/components/helm/HelmDrawer.css
@@ -12,6 +12,8 @@
   position: fixed;
   left: 0;
   right: 0;
+  user-select: none;
+  -webkit-user-select: none;
   bottom: 0;
   z-index: 150;
   background-color: var(--color-bg-card);
