--- a/src/pages/Helm.css
+++ b/src/pages/Helm.css
@@ -4,6 +4,8 @@
   height: 100%;
   max-height: 100dvh;
   background-color: var(--color-bg-primary);
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 /* Top bar */
